# redis-roaring

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CI_INTEGRATION.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUZZING_IMPLEMENTATION.md  LICENSE.md  README.md  build.sh  configure  configure.sh  deploy.sh  deploy_key.enc  helper.sh  performance.sh  reroaring.c  test  test.sh  test_macos.sh  test_valgrind.sh  valgrind.sh
.github/workflows/: ci.yml
docs/: .README.md.un~  README.md  fuzzing.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/commands/: index.md  r.appendintarray.md  r.bitcount.md  r.bitop.md  r.bitpos.md  r.clear.md  r.clearbits.md  r.contains.md  r.deleteintarray.md  r.diff.md  r.getbit.md  r.getbitarray.md  r.getbits.md  r.getintarray.md  r.jaccard.md  r.max.md  r.min.md  r.optimize.md  r.rangeintarray.md  r.setbit.md  r.setbitarray.md  r.setfull.md  r.setintarray.md  r.setrange.md  r.stat.md  r64.appendintarray.md  r64.bitcount.md  r64.bitop.md  r64.bitpos.md  r64.clear.md  r64.clearbits.md  r64.contains.md  r64.deleteintarray.md  r64.diff.md  r64.getbit.md  r64.getbitarray.md  r64.getbits.md  r64.getintarray.md  r64.jaccard.md  r64.max.md  (+8 more)
docs/guide/: getting-started.md  performance.md  what-is-roaring-bitmap.md
scripts/: build_fuzzers.sh  check_fuzz_coverage.sh  generate_corpus_from_realdata.sh  generate_seeds.sh  minimize_crash.sh  reproduce_crash.sh  run_all_fuzzers.sh  run_fuzzer.sh  validate_fuzz_manifest.py
src/: bitop_keys.h  common.h  data-structure.c  data-structure.h  data_structure.c  data_structure.h  parse.c  parse.h  r_32.c  r_32.h  r_64.c  r_64.h  redis-roaring.c  redismodule.h  reroaring.c  rmalloc.h  roaring.c  roaring.h  type.c  type.h  version.h
src/cmd_info/: command_info.c  command_info.h  r64_info.c  r_info.c  root_info.c
tests/: helper.sh  integration.sh  integration_1.sh  integration_2.sh  integration_3.sh  integration_4.sh  main.c  numbersfromtextfiles.h  performance.c  test-utils.h  unit.c
tests/fuzz/: CMakeLists.txt  README.md  fuzz_bitmap64_api.c  fuzz_bitmap64_api.cpp  fuzz_bitmap_api.c  fuzz_bitmap_api.cpp  fuzz_bitmap_operations.c  fuzz_bitmap_operations.cpp  fuzz_bitmap_serialization.c  fuzz_bitmap_serialization.cpp  fuzz_bitop_keys.c  fuzz_bitop_oracles.h  fuzz_cluster_routing.c  fuzz_command_dispatch.c  fuzz_command_manifest.h  fuzz_command_metadata.c  fuzz_common.h  fuzz_manifest.json  fuzz_manifest.md  fuzz_persistence_sequences.c  fuzz_r_vs_r64_parity.c  fuzz_redis_harness.h
tests/fuzz/corpus/bitmap64_api/: seed1_large_offset  seed2_intarray64  seed2_large64  seed3_bitop64  seed4_range64  seed_census1881_64bit
tests/fuzz/corpus/bitmap_api/: seed1_setbit  seed2_intarray  seed3_bitop  seed4_range  seed5_mixed  seed_census1881_medium  seed_census1881_small
tests/fuzz/corpus/bitmap_operations/: seed1_or  seed2_and  seed3_xor  seed4_andnot
tests/fuzz/corpus/bitmap_serialization/: seed1_small  seed2_multi  seed3_range
tests/fuzz/corpus/bitop_keys/: seed1_or_min  seed2_not_with_size  seed3_invalid_op  seed4_invalid_arity
tests/fuzz/corpus/cluster_routing/: seed1_same_slot  seed2_cross_slot  seed3_function_route
tests/fuzz/corpus/command_dispatch/: seed1_or32  seed2_not64  seed3_invalid
tests/fuzz/corpus/command_metadata/: seed3_bitop  seed3_diff  seed4_bitop_not  seed5_stat_optional
tests/fuzz/corpus/operations/: seed1_and  seed2_or  seed_census1881_and  seed_census1881_or  seed_census1881_xor
tests/fuzz/corpus/r_vs_r64_parity/: seed1_or  seed2_getbits  seed2_not_alias  seed3_range  seed4_diff_alias  seed6_setbitarray  seed7_bitop_alias  seed8_contains  seed9_jaccard
tests/fuzz/corpus/serialization/: seed1_bitstring  seed2_intarray  seed3_range  seed_census1881_intarray  seed_census1881_intarray64  seed_census1881_range
tests/unit/: test_bitmap64_and.c  test_bitmap64_andnot.c  test_bitmap64_andor.c  test_bitmap64_clearbits.c  test_bitmap64_clearbits_count.c  test_bitmap64_free.c  test_bitmap64_from_bit_array.c  test_bitmap64_from_int_array.c  test_bitmap64_get_bit_array.c  test_bitmap64_get_nth_element.c  test_bitmap64_getbit.c  test_bitmap64_getbits.c  test_bitmap64_intersect.c  test_bitmap64_jaccard.c  test_bitmap64_not.c  test_bitmap64_one.c  test_bitmap64_or.c  test_bitmap64_ornot.c  test_bitmap64_range_int_array.c  test_bitmap64_setbit.c  test_bitmap64_xor.c  test_bitmap_and.c  test_bitmap_andnot.c  test_bitmap_andor.c  test_bitmap_clearbits.c  test_bitmap_clearbits_count.c  test_bitmap_free.c  test_bitmap_from_bit_array.c  test_bitmap_from_int_array.c  test_bitmap_get_nth_element.c  test_bitmap_getbits.c  test_bitmap_intersect.c  test_bitmap_jaccard.c  test_bitmap_not.c  test_bitmap_one.c  test_bitmap_or.c  test_bitmap_ornot.c  test_bitmap_range_int_array.c  test_bitmap_setbit.c  test_bitmap_xor.c  (+1 more)
valgrind-3.13.0/: FAQ.txt  Makefile.in  Makefile.vex.in  aclocal.m4  config.h  config.h.in  config.status  configure  default.supp  glibc-2.X.supp  valgrind.pc  valgrind.spec
valgrind-3.13.0/.in_place/: 32bit-core-valgrind-s1.xml  32bit-core-valgrind-s2.xml  32bit-core.xml  32bit-linux-valgrind-s1.xml  32bit-linux-valgrind-s2.xml  32bit-linux.xml  32bit-sse-valgrind-s1.xml  32bit-sse-valgrind-s2.xml  32bit-sse.xml  64bit-avx-valgrind-s1.xml  64bit-avx-valgrind-s2.xml  64bit-avx.xml  64bit-core-valgrind-s1.xml  64bit-core-valgrind-s2.xml  64bit-core.xml  64bit-linux-valgrind-s1.xml  64bit-linux-valgrind-s2.xml  64bit-linux.xml  64bit-sse-valgrind-s1.xml  64bit-sse-valgrind-s2.xml  64bit-sse.xml  amd64-avx-coresse-valgrind.xml  amd64-avx-coresse.xml  amd64-avx-linux-valgrind.xml  amd64-avx-linux.xml  amd64-coresse-valgrind.xml  amd64-linux-valgrind.xml  arm-core-valgrind-s1.xml  arm-core-valgrind-s2.xml  arm-core.xml  arm-vfpv3-valgrind-s1.xml  arm-vfpv3-valgrind-s2.xml  arm-vfpv3.xml  arm-with-vfpv3-valgrind.xml  arm-with-vfpv3.xml  cachegrind-amd64-linux  callgrind-amd64-linux  default.supp  drd-amd64-linux  exp-bbv-amd64-linux  (+73 more)
valgrind-3.13.0/auxprogs/: Makefile.in  getoff-amd64-linux  valgrind-di-server  valgrind-listener
(+452 files in other folders)
